[package]
name = "onft-rs"
version = "0.1.0"
edition = "2021"
authors = ["Siddhu Yeturi <siddhuyeturi@gmail.com>"]
repository = "https://github.com/5iddy/onft-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.1.1"
schemars = "0.8.1"
serde = { version = "1.0.144", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
